# go-ping-pong-grpc

./: .bazelignore  .env  .gitignore  BUILD.bazel  deps.bzl  go.mod  go.sum
game_controller/cmd/: BUILD.bazel  main.go
game_controller/pkg/config/: BUILD.bazel  config.go
game_controller/pkg/config/envs/: dev.env
game_controller/pkg/core/ping_client/: BUILD.bazel  ping_client.go
game_controller/pkg/core/pong_client/: BUILD.bazel  pong_client.go
game_controller/pkg/core/service/: BUILD.bazel  controller.go
ping-pong-runner/: BUILD.bazel  main.go
ping/cmd/: BUILD.bazel  main.go
ping/pkg/pb/: ping.pb.go  ping_grpc.pb.go
ping/pkg/service/: BUILD.bazel  ping.go
pong/cmd/: BUILD.bazel  main.go
pong/pkg/service/: BUILD.bazel  pong.go
protos/ping/: BUILD.bazel  ping.proto  pong.pb.go
protos/pong/: BUILD.bazel  pong.proto
