load("@bazel_gazelle//:def.bzl", "gazelle")

# gazelle:prefix github.com/example/app1
gazelle(name = "gazelle")

gazelle(
    name = "gazelle-update-repos",
    args = [
        "-from_file=go.mod",
        "-to_macro=deps.bzl%go_dependencies",
        "-prune",
        "-build_file_proto_mode=disable_global",
    ],
    command = "update-repos",
)

# go_library(
#     name = "project_lib",
#     srcs = ["app1.go"],
#     embed = [":srv1_go_proto"],
#     importpath = "github.com/example/project",
#     visibility = ["//visibility:private"],
# )
