load("@io_bazel_rules_go//go:def.bzl", "go_library")

go_library(
    name = "ping-pong-runner",
    srcs = ["main.go"],
    importpath = "github.com/example/app1/ping-pong-runner",
    visibility = ["//visibility:public"],
)

go_library(
    name = "ping-pong-runner_lib",
    srcs = ["main.go"],
    importpath = "github.com/dimaaash/go-ping-pong-grpc/ping-pong-runner",
    visibility = ["//visibility:private"],
)
