load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/dimaaash/go-ping-pong-grpc/game_controller/cmd",
    visibility = ["//visibility:public"],
    deps = [
        "//game_controller/pkg/config",
        "//game_controller/pkg/core/ping_client",
        "//game_controller/pkg/core/pong_client",
        "//protos/ping",
        "//protos/pong",
    ],
)

go_binary(
    name = "cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
    goarch = "amd64",
    goos = "linux",
)
