load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/dimaaash/go-ping-pong-grpc/ping/cmd",
    visibility = ["//visibility:private"],
)

go_binary(
    name = "ping_cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
