load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "cmd_lib",
    srcs = ["main.go"],
    importpath = "github.com/dimaaash/go-ping-pong-grpc/ping/cmd",
    visibility = ["//visibility:private"],
    deps = [
        "//ping/pkg/service",
        "//protos/ping",
        "@org_golang_google_grpc//:go_default_library",
    ],
)

go_binary(
    name = "ping_cmd",
    embed = [":cmd_lib"],
    visibility = ["//visibility:public"],
)
