load("@rules_proto//proto:defs.bzl", "proto_library")
load("@io_bazel_rules_go//go:def.bzl", "go_library")
load("@io_bazel_rules_go//proto:def.bzl", "go_proto_library")

proto_library(
    name = "pb_proto",
    srcs = ["ping.proto"],
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "pb_go_proto",
    compilers = ["@io_bazel_rules_go//proto:go_grpc"],
    importpath = "pkg/pb",
    proto = ":pb_proto",
    visibility = ["//visibility:public"],
)

go_library(
    name = "pb",
    embed = [":pb_go_proto"],
    importpath = "pkg/pb",
    visibility = ["//visibility:public"],
)

# proto_library(
#     name = "ping_proto",
#     srcs = ["protos/ping.proto"],
#     visibility = ["//visibility:public"],
# )

# go_proto_library(
#     name = "ping_go_proto",
#     compilers = ["@io_bazel_rules_go//proto:go_grpc"],
#     importpath = "github.com/example/app1/protos/ping",
#     proto = ":ping_proto",
#     visibility = ["//visibility:public"],
# )

# go_library(
#     name = "ping",
#     embed = [":ping_go_proto"],
#     importpath = "github.com/example/app1/protos/ping",
#     visibility = ["//visibility:public"],
# )
